# ChangeLog for app-text/rfcutil
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.6 2004/03/23 20:46:06 dragonheart Exp $

  24 Mar 2004; Daniel Black <dragonheart@gentoo.org> rfcutil-3.2.3.ebuild,
  files/rfc-3.2.3.diff, files/rfc-3.2.3.gaarde:
  QA fix of bug #45358. Cleaned ebuild up too

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*rfcutil-3.2.3 (28 Jul 2002)

  15 Feb 2003; Mark Guertin <gerk@gentoo.org> rfcutil-3.2.3.ebuild :
  set ppc in keywords

  28 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> rfcutil-3.2.3.ebuild : 

  Initial import. Ebuild submitted by Paul Belt <gaarde@yahoo.com>.  