@@ -1,6 +1,9 @@
 # ChangeLog for app-text/rfcutil
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.6 2004/03/23 20:46:06 dragonheart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.7 2004/03/28 02:21:16 genone Exp $
+
+  28 Mar 2004; Marius Mauch <genone@gentoo.org> rfcutil-3.2.3.ebuild:
+  fixed unneccessary browser dependencies.
 
   24 Mar 2004; Daniel Black <dragonheart@gentoo.org> rfcutil-3.2.3.ebuild,
   files/rfc-3.2.3.diff, files/rfc-3.2.3.gaarde:
